[package]
authors = ["Chainflip team <https://github.com/chainflip-io>"]
build = 'build.rs'
edition = '2021'
name = "chainflip-engine"
version = "1.7.0"

[lib]
crate-type = ["lib"]
name = "chainflip_engine"
path = 'src/lib.rs'

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
httparse = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

dyn-clone = { workspace = true }
ethbloom = { workspace = true }
ethers = { workspace = true, features = ["rustls"] }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true, features = ["hashes"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
subxt = { workspace = true, features = ["substrate-compat"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
url = { workspace = true }
web3 = { workspace = true, features = ["ws-tls-tokio"] }
zeroize = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
ed25519-dalek = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["serde"] }
warp = { workspace = true }
regex = { workspace = true }
lazy_format = { workspace = true }
zmq = { workspace = true, features = ["vendored"] }

# Local deps
cf-chains = { workspace = true }
cf-primitives = { workspace = true }
chainflip-node = { workspace = true }
custom-rpc = { workspace = true }
engine-upgrade-utils = { workspace = true }
multisig = { workspace = true }
pallet-cf-account-roles = { workspace = true }
pallet-cf-broadcast = { workspace = true }
pallet-cf-chain-tracking = { workspace = true }
pallet-cf-elections = { workspace = true }
pallet-cf-environment = { workspace = true }
pallet-cf-flip = { workspace = true }
pallet-cf-governance = { workspace = true }
pallet-cf-ingress-egress = { workspace = true }
pallet-cf-reputation = { workspace = true }
pallet-cf-funding = { workspace = true }
pallet-cf-swapping = { workspace = true }
pallet-cf-threshold-signature = { workspace = true }
pallet-cf-validator = { workspace = true }
pallet-cf-vaults = { workspace = true }
pallet-cf-witnesser = { workspace = true }
pallet-cf-cfe-interface = { workspace = true }
state-chain-runtime = { workspace = true }
cf-utilities = { workspace = true }
sol-prim = { workspace = true, features = ["pda", "str", "serde", "scale"] }

# substrate deps
cf-amm = { workspace = true }
codec = { workspace = true, features = ["derive", "full"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sc-rpc-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }
sp-version = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

frame-metadata = { workspace = true, features = ["current"] }
serde_bytes = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
rocksdb = { workspace = true, features = ["lz4"] }

[dev-dependencies]
csv = { workspace = true }
ethereum = { workspace = true }
mockall = { workspace = true, features = ["nightly"] }
multisig = { workspace = true, features = ["test"] }
rlp = { workspace = true }
tempfile = { workspace = true }
cf-utilities = { workspace = true, features = ["test-utils"] }
serde_path_to_error = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
engine-upgrade-utils = { workspace = true }

[features]
integration-test = []
std = []
