[package]
authors = ["Chainflip team <https://github.com/chainflip-io>"]
build = "build.rs"
edition = "2021"
name = "chainflip-engine"
version = "1.7.9"

[lib]
crate-type = ["lib"]
name = "chainflip_engine"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive", "env"] }
config = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true, default-features = true }
httparse = { workspace = true }
http = { workspace = true }
itertools = { workspace = true, default-features = true }
jsonrpsee = { workspace = true, features = ["full"] }

dyn-clone = { workspace = true }
ethbloom = { workspace = true }
ethers = { workspace = true, features = ["rustls"] }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
secp256k1 = { workspace = true, features = ["hashes"] }
serde = { workspace = true, default-features = true, features = [
    "derive",
    "rc",
] }
serde_json = { workspace = true }
sha2 = { workspace = true, default-features = true }
subxt = { workspace = true, features = ["substrate-compat"] }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
url = { workspace = true }
web3 = { workspace = true, features = ["ws-tls-tokio"] }
zeroize = { workspace = true }
curve25519-dalek = { workspace = true, default-features = true, features = [
    "serde",
] }
ed25519-dalek = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true, default-features = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["serde"] }
warp = { workspace = true }
regex = { workspace = true }
lazy_format = { workspace = true }
zmq = { workspace = true, features = ["vendored"] }

# Local deps
cf-chains = { workspace = true, default-features = true }
cf-primitives = { workspace = true, default-features = true }
chainflip-node = { workspace = true }
custom-rpc = { workspace = true }
engine-upgrade-utils = { workspace = true }
multisig = { workspace = true }
pallet-cf-account-roles = { workspace = true, default-features = true }
pallet-cf-broadcast = { workspace = true, default-features = true }
pallet-cf-chain-tracking = { workspace = true, default-features = true }
pallet-cf-elections = { workspace = true, default-features = true }
pallet-cf-environment = { workspace = true, default-features = true }
pallet-cf-flip = { workspace = true, default-features = true }
pallet-cf-governance = { workspace = true, default-features = true }
pallet-cf-ingress-egress = { workspace = true, default-features = true }
pallet-cf-reputation = { workspace = true, default-features = true }
pallet-cf-funding = { workspace = true, default-features = true }
pallet-cf-swapping = { workspace = true, default-features = true }
pallet-cf-threshold-signature = { workspace = true, default-features = true }
pallet-cf-validator = { workspace = true, default-features = true }
pallet-cf-vaults = { workspace = true, default-features = true }
pallet-cf-witnesser = { workspace = true, default-features = true }
pallet-cf-cfe-interface = { workspace = true, default-features = true }
state-chain-runtime = { workspace = true, default-features = true }
cf-utilities = { workspace = true, default-features = true }
sol-prim = { workspace = true, features = ["pda", "str", "serde", "scale"] }

# substrate deps
cf-amm = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true, features = [
    "derive",
    "full",
] }
frame-support = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
scale-info = { workspace = true, default-features = true, features = [
    "derive",
] }
sp-core = { workspace = true, default-features = true }
sp-rpc = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-version = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true }

frame-metadata = { workspace = true, default-features = true, features = [
    "current",
] }
serde_bytes = { workspace = true, default-features = true }
bs58 = { workspace = true, default-features = true }
base64 = { workspace = true }
rocksdb = { workspace = true, features = ["lz4"] }

[dev-dependencies]
csv = { workspace = true }
ethereum = { workspace = true, default-features = true }
mockall = { workspace = true, features = ["nightly"] }
multisig = { workspace = true, features = ["test"] }
rlp = { workspace = true, default-features = true }
tempfile = { workspace = true }
cf-utilities = { workspace = true, default-features = true, features = [
    "test-utils",
] }
serde_path_to_error = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
engine-upgrade-utils = { workspace = true }

[features]
integration-test = []
std = []
