[package]
name = "relayer"
version = "0.1.0"
authors = ["dlennon <3168260+dandanlen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio1", "tokio02"] }
async-trait = "0.1"
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
hex = "0.4"
log = "0.4"
# Note: Keep this in sync with the SCALE version used by subxt
parity-scale-codec = { version = "2.0", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
substrate-subxt = { version = "0.15" }
thiserror = "1.0"
web3 = {version = "0.15"}

[dev-dependencies]
serde_json = "1.0"