[package]
authors = ['Chainflip Team <https://github.com/chainflip-io>']
edition = '2018'
homepage = 'https://chainflip.io'
license = '<TODO>'
name = 'state-chain-runtime'
repository = 'https://github.com/chainflip-io/chainflip-test-state-chain'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '3.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = {optional = true, version = '0.3.1'}
serde = {features = ['derive'], optional = true, version = '1.0.119'}

# Chainflip dependencies
pallet-cf-transactions = { path = "../pallets/cf-transactions", default-features =  false}
pallet-cf-validator = { path = "../pallets/cf-validator", default-features = false}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '2.0.1'}
frame-executive = {default-features = false, version = '2.0.1'}
frame-support = {default-features = false, version = '2.0.1'}
frame-system = {default-features = false, version = '2.0.1'}
frame-system-benchmarking = {default-features = false, optional = true, version = '2.0.1'}
frame-system-rpc-runtime-api = {default-features = false, version = '2.0.1'}
pallet-aura = {default-features = false, version = '2.0.1'}
pallet-grandpa = {default-features = false, version = '2.0.1'}
pallet-randomness-collective-flip = {default-features = false, version = '2.0.1'}
pallet-session = {default-features = false, version = '2.0.1'}
pallet-sudo = {default-features = false, version = '2.0.1'}
pallet-timestamp = {default-features = false, version = '2.0.1'}
sp-api = {default-features = false, version = '2.0.1'}
sp-block-builder = {default-features = false, version = '2.0.1'}
sp-consensus-aura = {default-features = false, version = '0.8.0'}
sp-core = {default-features = false, version = '2.0.1'}
sp-inherents = {default-features = false, version = '2.0.1'}
sp-offchain = {default-features = false, version = '2.0.1'}
sp-runtime = {default-features = false, version = '2.0.1'}
sp-session = {default-features = false, version = '2.0.1'}
sp-std = {default-features = false, version = '2.0.1'}
sp-transaction-pool = {default-features = false, version = '2.0.1'}
sp-version = {default-features = false, version = '2.0.1'}

[features]
default = ['std']
runtime-benchmarks = [
  'hex-literal',
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'pallet-timestamp/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
]
std = [
  'codec/std',
  'serde',
  'frame-executive/std',
  'frame-support/std',
  'frame-system/std',
  'frame-system-rpc-runtime-api/std',
  'pallet-aura/std',
  'pallet-grandpa/std',
  'pallet-randomness-collective-flip/std',
  'pallet-sudo/std',
  'pallet-timestamp/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
]
