[package]
authors = ['Chainflip <https://chainflip.io>']
description = 'Common utilities used by the State Chain and the Chainflip Engine'
edition = '2021'
homepage = 'https://chainflip.io'
license = 'TBC'
name = 'utilities'
repository = 'https://github.com/chainflip-io/chainflip-backend'
version = '0.1.0'

[lints]
workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = [
  "jsonrpsee-types",
], optional = true }
anyhow = { version = '1.0', optional = true }
async-broadcast = { version = "0.5", optional = true }
async-channel = { version = "1.7.1", optional = true }
bs58 = { version = "0.5.1", default-features = false }
futures = { version = "0.3.30", optional = true }
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.13", default-features = false }
lazy_format = "2.0"
lazy_static = "1.4"
log = "0.4"
mockall = { version = "0.11.0", optional = true }
num-traits = { version = "0.2", optional = true }
pin-project = { version = "1.0.12", optional = true }
predicates = { version = "3.0", optional = true }
prometheus = { version = "0.13.0", optional = true }
regex = { version = "1", optional = true }
scale-info = { version = "2.11.1", optional = true }
scopeguard = { version = "1.2.0" }
serde = { optional = true, version = "1.0.197", default-features = false, features = [
  "alloc",
  "derive",
] }
sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+1", optional = true }
sp-rpc = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+1", optional = true }
tempfile = { version = "3.7.0", optional = true }
thiserror = { version = "1.0.26", optional = true }
tokio = { version = "1.13.1", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
], optional = true }
url = { version = "2.4", optional = true }
warp = { version = "0.3.5", optional = true }

# local dependencies
scale-json = { path = "./scale-json", optional = true }


[dev-dependencies]
serde_json = "1.0"
tempfile = "3.7.0"
reqwest = { version = "0.11.4", features = ["rustls-tls"] }

[features]
default = ['std']
test-utils = ['dep:tempfile', 'dep:tracing', 'dep:tracing-subscriber']
std = [
	'dep:anyhow',
	'dep:async-broadcast',
	'dep:predicates',
	'dep:mockall',
	'dep:futures',
	'dep:tokio',
	'hex/std',
	'dep:async-channel',
	'itertools/use_std',
	'dep:pin-project',
	'dep:prometheus',
	'dep:serde',
	'serde?/std',
	'dep:scale-info',
	'dep:scale-json',
	'dep:thiserror',
	'dep:tracing',
	'dep:tracing-subscriber',
	'dep:warp',
	'dep:sp-core',
	'sp-core?/std',
	'dep:sp-rpc',
	'dep:num-traits',
	'dep:jsonrpsee',
	'dep:regex',
	'dep:url',
	"bs58/std",
	"log/std",
	"scale-json?/std",
	"sp-rpc?/std"
]
