[package]
authors = ["Chainflip <https://chainflip.io>"]
description = "Common utilities used by the State Chain and the Chainflip Engine"
edition = "2021"
homepage = "https://chainflip.io"
license = "TBC"
name = "utilities"
repository = "https://github.com/chainflip-io/chainflip-backend"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = [
  "client",
  "server",
], optional = true }
anyhow = { workspace = true, optional = true }
async-broadcast = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
futures = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_format = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mockall = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
predicates = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
scopeguard = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive", "alloc"] }
sp-core = { workspace = true, optional = true }
sp-rpc = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
  "json",
  "env-filter",
] }
url = { workspace = true, optional = true }
warp = { workspace = true, optional = true }

# local dependencies
scale-json = { workspace = true, optional = true }


[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }

[features]
std = [
  "dep:anyhow",
  "dep:async-broadcast",
  "dep:predicates",
  "dep:mockall",
  "dep:futures",
  "dep:futures-util",
  "dep:tokio",
  "hex/std",
  "dep:async-channel",
  "itertools/use_std",
  "dep:pin-project",
  "dep:prometheus",
  "dep:serde",
  "serde?/std",
  "dep:scale-info",
  "dep:scale-json",
  "dep:schemars",
  "dep:thiserror",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dep:warp",
  "dep:sp-core",
  "dep:sp-rpc",
  "dep:num-traits",
  "dep:jsonrpsee",
  "dep:regex",
  "dep:url",
  "dep:clap",
]
default = ["std"]
test-utils = ["dep:tempfile", "dep:tracing", "dep:tracing-subscriber"]
