[package]
name = "cf-node-clients"
version = "0.1.0"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
codec = { workspace = true, default-features = true }
scale-info = { workspace = true, features = ["derive"] }

# Chainflip Runtime
state-chain-runtime = { workspace = true, default-features = true }
thiserror = { workspace = true }

sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-version = { workspace = true }
frame-system = { workspace = true, default-features = true }
frame-metadata = { workspace = true, default-features = true, features = [
    "current",
] }
frame-metadata-hash-extension = { workspace = true }

[dev-dependencies]
pallet-cf-funding = { workspace = true, default-features = true }


