[package]
name = "cf-node-clients"
version = "0.1.0"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
codec = { workspace = true, default-features = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, default-features = true, features = ["derive"] }
thiserror = { workspace = true }

state-chain-runtime = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-version = { workspace = true }
frame-system = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }
frame-metadata = { workspace = true, default-features = true, features = [
    "current",
] }
frame-metadata-hash-extension = { workspace = true }
subxt = { workspace = true, features = ["substrate-compat"] }

[dev-dependencies]
pallet-cf-funding = { workspace = true, default-features = true }


