[package]
name = "cf-rpc-apis"
version = "0.1.0"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2021"
description = "Chainflip rpc apis definitions"
license = "Apache-2.0"


[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

cf-chains = { workspace = true, default-features = true }
cf-primitives = { workspace = true, default-features = true }
cf-rpc-types = { workspace = true }
state-chain-runtime = { workspace = true }


