[package]
name = "cf-rpc-types"
version = "0.1.0"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2021"
description = "Chainflip rpc related types"
license = "Apache-2.0"


[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# State Chain
# cf-amm = { workspace = true, default-features = true }
# # state-chain-runtime = { workspace = true, default-features = true }
# cf-chains = { workspace = true, default-features = true }
# cf-primitives = { workspace = true, default-features = true }
# cf-utilities = { workspace = true, default-features = true }
# sp-core = { workspace = true, default-features = true }
# frame-support = { workspace = true, default-features = true }
# pallet-cf-pools = { workspace = true, default-features = true }
# pallet-cf-funding = { workspace = true, default-features = true }

cf-amm = { workspace = true }
# state-chain-runtime = { workspace = true, default-features = true }
cf-chains = { workspace = true }
cf-primitives = { workspace = true }
cf-utilities = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
pallet-cf-pools = { workspace = true }
pallet-cf-funding = { workspace = true }

[features]
default = ["std"]
std = [
  "cf-amm/std",
  "cf-chains/std",
  "cf-primitives/std",
  "cf-utilities/std",
  "codec/std",
#   "hex/std",
#   "log/std",
#   "nanorand/std",
  "pallet-cf-funding/std",
  "pallet-cf-pools/std",
  "scale-info/std",
  "serde/std",
#   "sp-api/std",
  "sp-core/std",
  "sp-std/std",
]