[package]
name = "chainflip-integrator"
version = "0.1.0"
authors = ["Chainflip Team <https://github.com/chainflip-io>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
codec = { workspace = true, default-features = true }

# Chainflip Runtime
state-chain-runtime = { workspace = true, default-features = true }

anyhow = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
hex = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }

cf-chains = { workspace = true, default-features = true }
cf-primitives = { workspace = true, default-features = true }
cf-utilities = { workspace = true, default-features = true }

sp-core = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }


[dev-dependencies]
insta = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
