[package]
name = "chainflip-api"
version = "1.7.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac-sha512 = { workspace = true }
libsecp256k1 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tiny-bip39 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "peerid"] }
lazy_static = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

# Local
chainflip-engine = { path = "../../engine/" }
utilities = { path = "../../utilities/" }

# State Chain
cf-amm = { path = "../../state-chain/amm" }
cf-chains = { path = "../../state-chain/chains" }
cf-primitives = { path = "../../state-chain/primitives" }
chainflip-node = { path = "../../state-chain/node" }
custom-rpc = { path = "../../state-chain/custom-rpc" }
pallet-cf-account-roles = { path = '../../state-chain/pallets/cf-account-roles' }
pallet-cf-environment = { path = "../../state-chain/pallets/cf-environment" }
pallet-cf-governance = { path = "../../state-chain/pallets/cf-governance" }
pallet-cf-ingress-egress = { path = "../../state-chain/pallets/cf-ingress-egress" }
pallet-cf-lp = { path = '../../state-chain/pallets/cf-lp' }
pallet-cf-asset-balances = { path = '../../state-chain/pallets/cf-asset-balances' }
pallet-cf-funding = { path = "../../state-chain/pallets/cf-funding" }
pallet-cf-swapping = { path = '../../state-chain/pallets/cf-swapping' }
pallet-cf-pools = { path = '../../state-chain/pallets/cf-pools' }
pallet-cf-threshold-signature = { path = "../../state-chain/pallets/cf-threshold-signature" }
pallet-cf-validator = { path = "../../state-chain/pallets/cf-validator" }
state-chain-runtime = { path = "../../state-chain/runtime" }


# Substrate
frame-support = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-consensus-aura = { git = 'https://github.com/chainflip-io/polkadot-sdk.git', tag = 'chainflip-substrate-1.15.2+2' }
sp-core = { git = 'https://github.com/chainflip-io/polkadot-sdk.git', tag = 'chainflip-substrate-1.15.2+2' }
sp-consensus-grandpa = { git = 'https://github.com/chainflip-io/polkadot-sdk.git', tag = 'chainflip-substrate-1.15.2+2' }
codec = { workspace = true }
