[package]
name = "chainflip-api"
version = "1.7.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac-sha512 = { workspace = true }
libsecp256k1 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tiny-bip39 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "peerid"] }
lazy_static = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

# Local
chainflip-engine = { workspace = true }
cf-utilities = { workspace = true }

# State Chain
cf-amm = { workspace = true }
cf-chains = { workspace = true }
cf-primitives = { workspace = true }
chainflip-node = { workspace = true }
custom-rpc = { workspace = true }
pallet-cf-account-roles = { workspace = true }
pallet-cf-environment = { workspace = true }
pallet-cf-governance = { workspace = true }
pallet-cf-ingress-egress = { workspace = true }
pallet-cf-lp = { workspace = true }
pallet-cf-asset-balances = { workspace = true }
pallet-cf-funding = { workspace = true }
pallet-cf-swapping = { workspace = true }
pallet-cf-pools = { workspace = true }
pallet-cf-threshold-signature = { workspace = true }
pallet-cf-validator = { workspace = true }
state-chain-runtime = { workspace = true }


# Substrate
frame-support = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-consensus-grandpa = { workspace = true }
codec = { workspace = true }
