[package]
name = "chainflip-api"
version = "1.8.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bs58 = { workspace = true, default-features = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, default-features = true}
hmac-sha512 = { workspace = true }
libsecp256k1 = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
tiny-bip39 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
libp2p-identity = { workspace = true, features = ["ed25519", "peerid"] }
lazy_static = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }

# Local
chainflip-engine = { workspace = true }
cf-utilities = { workspace = true, default-features = true }
chainflip-integrator = { workspace = true }


# State Chain
cf-amm = { workspace = true, default-features = true }
cf-chains = { workspace = true, default-features = true }
cf-primitives = { workspace = true, default-features = true }
chainflip-node = { workspace = true }
custom-rpc = { workspace = true }
pallet-cf-account-roles = { workspace = true, default-features = true }
pallet-cf-environment = { workspace = true, default-features = true }
pallet-cf-governance = { workspace = true, default-features = true }
pallet-cf-ingress-egress = { workspace = true, default-features = true }
pallet-cf-lp = { workspace = true, default-features = true }
pallet-cf-asset-balances = { workspace = true, default-features = true }
pallet-cf-funding = { workspace = true, default-features = true }
pallet-cf-swapping = { workspace = true, default-features = true }
pallet-cf-pools = { workspace = true, default-features = true }
pallet-cf-threshold-signature = { workspace = true, default-features = true }
pallet-cf-validator = { workspace = true, default-features = true }
state-chain-runtime = { workspace = true, default-features = true }


# Substrate
frame-support = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
codec = { workspace = true, default-features = true }
